--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: marp-team/actions@v1
+    - uses: marp
     - name: Build & Deploy to GitHub Pages
       env: 
         MARP_ARGS: "README.md -o index.html"
@@ -16,4 +16,5 @@ jobs:
         GITHUB_REPOSITORY: ${{ github.repository }}
         PUBLISH_TO_BRANCH: main
         BASE_URL: https://sallys.space/mlops/
-      uses: jusonn/mlops@main
+      uses: ralexander-phi/marp-action@master
+      
